--- a/ouro-room-website/frontend/src/tsconfig.json
+++ b/ouro-room-website/frontend/src/tsconfig.json
@@ -1,4 +1,15 @@
 {
-  "extends": "../tsconfig.json",
-  "include": ["."]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist"
+  },
+  "include": ["."],
+  "exclude": ["node_modules", "dist"]
 }
