--- a/ouro-room-website/frontend/src/tsconfig.json
+++ b/ouro-room-website/frontend/src/tsconfig.json
@@ -10,6 +10,6 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist"
   },
-  "include": ["."],
+  "include": [".", "assets"],
   "exclude": ["node_modules", "dist"]
 }
