--- a/ouro-room-website/ouro-backend/.env
+++ b/ouro-room-website/ouro-backend/.env
@@ -1,4 +1,4 @@
 PYTHONPATH=.
 
-EMAIL_USER=parkerjeanneallen@gmail.com
-EMAIL_PASS=your-app-password-here
+EMAIL_USER="parkerjeanneallen@gmail.com"
+EMAIL_PASS="enie gxam fqqt aslf"
