--- a/ouro-room-website/ouro-backend/package.json
+++ b/ouro-room-website/ouro-backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ouro-backend",
   "version": "1.0.0",
-  "main": "api/index.js",     
+  "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js",   
-    "dev": "nodemon api/index.js",  
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,10 +13,13 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"  
+    "nodemon": "^3.0.2"
   }
 }
