--- a/ouro-room-website/ouro-backend/requirements.txt
+++ b/ouro-room-website/ouro-backend/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.8.1
-Django==4.2.23
-django-cors-headers==4.7.0
-djangorestframework==3.16.0
+Django==4.2.13
+djangorestframework==3.15.2
+django-cors-headers==4.3.1
 djangorestframework_simplejwt==5.5.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
-gunicorn==23.0.0
+whitenoise==6.9.0
